# iceoryx-rust

./: COPYRIGHT  Cargo.toml  README.md  build.rs  wrapper.h
doc/: bindings_c_read_only.rs  bindings_cpp_read_only.rs  disco.rs
examples/icedelivery_in_rs/: ice_rs_publisher.rs  ice_rs_subscriber.rs
iceoryx-sys/: Cargo.toml  README.md  build.rs
iceoryx-sys/src/: lib.rs
