[package]
name = "iceoryx-rs-c"
version = "0.0.2"
authors = ["ZhenshengLee"]
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
keywords = ["iceoryx"]
readme = "README.md"
repository = "https://github.com/ZhenshengLee/iceoryx-rust"
categories = ["midleware", "external-ffi-bindings"]
description = "High-level iceoryx library in Rust"

[features]
# Only build docs, don't link to anything
docs-only = ["iceoryx-sys/docs-only"]

[lib]
name = "iceoryx_rust"

[[bin]]
name = "ice_rs_publisher"
path = "examples/icedelivery_in_rs/ice_rs_publisher.rs"

[[bin]]
name = "ice_rs_subscriber"
path = "examples/icedelivery_in_rs/ice_rs_subscriber.rs"

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]
